--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
     <div>
     <p>HTML, which stands for HyperText Markup Language, is the standard markup language for creating web pages. It provides the structure and content of a webpage, using a system of elements and attributes. Essentially, HTML is the foundation upon which websites are built, telling web browsers how to display text, images, and other content. </p>
     </div>
+    <div>
+    <p>HTML, which stands for HyperText Markup Language, is the standard markup language for creating web pages. It provides the structure and content of a webpage, using a system of elements and attributes. Essentially, HTML is the foundation upon which websites are built, telling web browsers how to display text, images, and other content. </p>
+    </div>
+    <div>
+    <p>HTML, which stands for HyperText Markup Language, is the standard markup language for creating web pages. It provides the structure and content of a webpage, using a system of elements and attributes. Essentially, HTML is the foundation upon which websites are built, telling web browsers how to display text, images, and other content. </p>
+    </div>
+
 </body>
 </html>
